--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 
           <div class="list__main">
             <div class="list__title"><strong>Machine Learning: An Interaction Odessy</strong></div>
-            <div class="list__date">July, 17 2018</div>
+            <div class="list__date">July 17, 2018</div>
           </div>
 
           <div class="list__description">A week in Copenhagen chilling with machines.</div>
