--- a/about.html
+++ b/about.html
@@ -44,9 +44,10 @@
         
         <div class="about__links">
           <ul>
-            <li><a class="email" href="">Instagram</a></li>
-            <li><a class="instagram" href="">Library</a></li>
-            <li><a class="library" href="https://giphy.com/gifs/school-bus-wheelie-NktFjqntkZQbe/tile">Spirit Animal</a></li>
+            <li><a class="email" href="">hello[at]lukaschulz[.]com</a></li>
+            <li><a class="instagram" href="https://www.instagram.com/luka_schulz/?hl=en">Instagram</a></li>
+            <li><a class="library" href="">Library</a></li>
+            <li><a class="spirit-animal" href="https://giphy.com/gifs/school-bus-wheelie-NktFjqntkZQbe/tile">Spirit Animal</a></li>
           </ul>
         </div>
       </div>
