Cleaning up directory and updating portfolio pages

--- a/portfolio/_exout/index.html
+++ b/portfolio/_exout/index.html
@@ -13,8 +13,9 @@
     <meta property="og:description" content="{{ page.content | strip_html | lstrip | truncatewords: 50 }}"/>
     <meta property="og:image" content=""/>
 
-    <meta name="theme-color" content="#7b7b7b" />
+    <meta name="theme-color" content="#b4b4b4" />
 
+    <link href="../../css/typography.css" rel="stylesheet" type="text/css">
     <link href="../../css/style.css" rel="stylesheet" type="text/css">
 
     <link rel="shortcut icon" href="../../yes-its-upsidedown.png">
@@ -24,12 +25,12 @@
   <body class="phl">
 
     <header class="wrap sans site__header"role="banner">
-      <a class="site__title b plainlink"href="../../index.html">Luka Schulz</a>
+      <a class="site__title b plainLink"href="../../index.html">Luka Schulz</a>
 
       <nav class="site__nav"role="navigation">
         <ul class="nav">
-          <li><a class="plainlink"href="../../blog.html">Blog</a></li>
-          <li><a class="plainlink"href="../../about.html">About</a></li>
+          <li><a class="plainLink"href="../../blog.html">Blog</a></li>
+          <li><a class="plainLink"href="../../about.html">About</a></li>
 
         </ul>
       </nav>
@@ -39,11 +40,18 @@
     <main class="wrap site__content" role="main">
 
       <header class="page__header mbl">
-        <h1>The Creation of Adam</h1>
-        <p class="post__date small">Computational Aesthetics</p>
+        <h1>#ExOut</h1>
+        <p class="post__date small">UX/UI, Design Systems</p>
       </header>
 
-      <article class="project__content" id="creationOfAdam">
+      <article class="project__content" id="exOut">
+        <figure>
+          <a href="../../images/place-holder/1920x1080.jpg" title="Copenhagen Institute of Interaction Design Mantra: listen, Build, test, repeat." target="_blank">
+            <img src="../../images/place-holder/1920x1080.jpg" style="background: rgb(211, 211, 211);">
+          </a>
+          <figcaption></figcaption>
+        </figure>
+        
         <p>I started talking to computers back in 2016. It was a requirment for Computer Science I & II. Initally, I was quite dubious of my digital relationship. Don't get me wrong, I loved me some data structures but at the end of the day, it really wasn't greasing my circuits&mdash;if you know what I mean. I was a designer lost in recusion and 2D arrays unsure of what to do with my newly acquired powers. This all changed upon my faithful encounter with the eminent sage, Charlie Roberts.</p>
         
         <p>Under his tootelidge I learned to harness my Computer Science knowledeg and apply it towards asthetics. Something was missing though. I wanted too goober up my work. It turns out, the best way to do that is to use the chair of my program, Adam Smith. What follows is a series of projects exploring various algorithims and computational ideas with a goobery twist.</p>
