--- a/portfolio/imagine-rit/index.html
+++ b/portfolio/imagine-rit/index.html
@@ -15,6 +15,7 @@
 
     <meta name="theme-color" content="#b4b4b4" />
 
+    <link href="../../css/typography.css" rel="stylesheet" type="text/css">
     <link href="../../css/style.css" rel="stylesheet" type="text/css">
 
     <link rel="shortcut icon" href="../../yes-its-upsidedown.png">
@@ -24,12 +25,12 @@
   <body class="phl">
 
     <header class="wrap sans site__header"role="banner">
-      <a class="site__title b plainlink"href="../../index.html">Luka Schulz</a>
+      <a class="site__title b plainLink"href="../../index.html">Luka Schulz</a>
 
       <nav class="site__nav"role="navigation">
         <ul class="nav">
-          <li><a class="plainlink"href="../../blog.html">Blog</a></li>
-          <li><a class="plainlink"href="../../about.html">About</a></li>
+          <li><a class="plainLink"href="../../blog.html">Blog</a></li>
+          <li><a class="plainLink"href="../../about.html">About</a></li>
         </ul>
       </nav>
 
@@ -69,10 +70,10 @@
         
         <figure>
           <div class="flex">
-            <a href="../../images/grid/imagine-rit.jpg" title="Lars and Mikkel brainstorming." target="_blank">
+            <a class="mrs" href="../../images/grid/imagine-rit.jpg" title="Lars and Mikkel brainstorming." target="_blank">
               <img src="../../images/grid/imagine-rit.jpg" style="background: rgb(211, 211, 211);">
             </a>
-            <a class="middle" href="../../images/grid/imagine-rit.jpg" title="A pink sticky note." target="_blank">
+            <a class="mrs" href="../../images/grid/imagine-rit.jpg" title="A pink sticky note." target="_blank">
               <img src="../../images/grid/imagine-rit.jpg" style="background: rgb(211, 211, 211);">
             </a>
             <a href="../../images/grid/imagine-rit.jpg" title="A pink sticky note." target="_blank">
