--- a/about.html
+++ b/about.html
@@ -13,8 +13,9 @@
     <meta property="og:description" content="{{ page.content | strip_html | lstrip | truncatewords: 50 }}"/>
     <meta property="og:image" content=""/>
 
-    <meta name="theme-color" content="#7b7b7b" />
+    <meta name="theme-color" content="#b4b4b4" />
 
+    <link href="css/typography.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
     <link rel="shortcut icon" href="yes-its-upsidedown.png">
@@ -24,12 +25,12 @@
   <body class="phl">
 
     <header class="wrap sans site__header"role="banner">
-      <a class="site__title b plainlink"href="index.html">Luka Schulz</a>
+      <a class="site__title b plainLink"href="index.html">Luka Schulz</a>
 
       <nav class="site__nav"role="navigation">
         <ul class="nav">
-          <li><a class="plainlink"href="./blog.html">Blog</a></li>
-          <li><a class="plainlink"href="./about.html">About</a></li>
+          <li><a class="plainLink"href="./blog.html">Blog</a></li>
+          <li><a class="plainLink"href="./about.html">About</a></li>
 
         </ul>
       </nav>
@@ -44,7 +45,6 @@
         
         <div class="about__links">
           <ul>
-            <li><a class="email" href="">hello[at]lukaschulz[.]com</a></li>
             <li><a class="instagram" href="https://www.instagram.com/luka_schulz/?hl=en">Instagram</a></li>
             <li><a class="library" href="">Library</a></li>
             <li><a class="spirit-animal" href="https://giphy.com/gifs/school-bus-wheelie-NktFjqntkZQbe/tile">Spirit Animal</a></li>
