Updating blog posts

--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "AIzaSyBEnqyTIg7sfUx88RRUTCzLmd12uwQU6EA",
-        authDomain: "portfolio-lukaschulz.firebaseapp.com",
-        databaseURL: "https://portfolio-lukaschulz.firebaseio.com",
-        projectId: "portfolio-lukaschulz",
-        storageBucket: "portfolio-lukaschulz.appspot.com",
-        messagingSenderId: "829657753538"
+        apiKey: "AIzaSyCtKMqZqH3P64KPFdeqlY8Oyp7XGt9VwL4",
+        authDomain: "luka-schulz.firebaseapp.com",
+        databaseURL: "https://luka-schulz.firebaseio.com",
+        projectId: "luka-schulz",
+        storageBucket: "luka-schulz.appspot.com",
+        messagingSenderId: "80070852375"
       };
       firebase.initializeApp(config);
     </script>
